# duanyujian

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md
ClassExamProject/: CMakeLists.txt
Example/: CMakeLists.txt
Example/CppBase/: CMakeLists.txt  kxperson.cpp  kxperson.h  main.cpp
Example/GMockExample/: CMakeLists.txt  foo.h  test.cpp
Example/GtestExample/: CMakeLists.txt  test.cpp
Example/PersonCpp/: CMakeLists.txt  person.cpp  person.h
Example/PersonMain/: CMakeLists.txt  main.cpp
Example/QtChart/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Example/QtDemo/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Example/QtWeek07/: CMakeLists.txt  main.cpp
LessonCode/: CMakeLists.txt
LessonCode/week01/practice/work01Practice01/: AverageMapValue.sln
LessonCode/week01/practice/work01Practice02/: ProductFactory.sln
LessonCode/week01/practice/work01Practice03/: TaskSort.sln
LessonCode/week02/practice/: ReadMe.md
LessonCode/week02/practice/work02practice01/: work02practice01.sln
LessonCode/week02/practice/work02practice02/: BaseSharedPtr.sln
LessonCode/week02/practice/work02practice03/: RValueString.sln
LessonCode/week02/practice/work02practice04/: STLVector.sln
LessonCode/week02/practice/work02practice05/: MonkeyFindKing.sln
LessonCode/week02/practice/work02practice06/: StudentSorce.sln
LessonCode/week03/: CMakeLists.txt
LessonCode/week03/practice/: ReadMe.md
LessonCode/week03/practice/circledynamiclib/: CMakeLists.txt  circle.cpp  circle.h
LessonCode/week03/practice/circledynamicmain/: CMakeLists.txt  main.cpp
LessonCode/week03/practice/circlestaticlib/: CMakeLists.txt  circle.cpp  circle.h
LessonCode/week03/practice/circlestaticmain/: CMakeLists.txt  main.cpp
LessonCode/week03/practice/configuredynamiclib/: CMakeLists.txt  configure.cpp  configure.h
LessonCode/week03/practice/configuredynamictest/: CMakeLists.txt  configuretest.cpp
LessonCode/week03/practice/kcircle/: CMakeLists.txt  kcircle.cpp  kcircle.h  main.cpp
LessonCode/week03/practice/kcirclecmake/: CMakelists.txt
LessonCode/week03/practice/kcirclecmake/kcircle/: kcircle.cmake
LessonCode/week03/practice/kcirclecmake/kcircle/src/: kcircle.cpp
LessonCode/week03/practice/kcirclecmake/kcirclemain/: CMakeLists.txt  main.cpp
LessonCode/week03/practice/linkliststaticlib/: CMakeLists.txt  linklist.cpp  linklist.h  linklistnode.cpp  linklistnode.h
LessonCode/week03/practice/linkliststatictest/: CMakeLists.txt  linklisttest.cpp  linklisttest.h  test.cpp
LessonCode/week04/: CMakeLists.txt
LessonCode/week04/homework/: CMakeLists.txt  ReadMe.md
LessonCode/week04/homework/searchstringstaticbenchmarktest/: CMakeLists.txt  test.cpp
LessonCode/week04/homework/searchstringstaticlib/: CMakeLists.txt  keywordresult.h  keywordsearcher.cpp  keywordsearcher.h  memorypool.cpp  memorypool.h  threadpool.cpp  threadpool.h
LessonCode/week04/homework/searchstringstaticmain/: CMakeLists.txt  main.cpp
LessonCode/week04/homework/searchstringstaticunittest/: CMakeLists.txt  test.cpp
LessonCode/week04/practice/: CMakeLists.txt  ReadMe.md
LessonCode/week04/practice/tacketgrabbing/: CMakeLists.txt  tacketgrabbing.cpp
LessonCode/week04/practice/videodownloadplay/: CMakeLists.txt  videodownloadplay.cpp
LessonCode/week04/practice/weatherobserverobserved/: CMakeLists.txt  weatherobserverobserved.cpp
LessonCode/week05/practice/: CMakeLists.txt  ReadMe.md
LessonCode/week05/practice/objectcommunication/: CMakeLists.txt  objectcommunication.cpp
LessonCode/week05/practice/qtimerexample/: CMakeLists.txt  main.cpp
LessonCode/week05/practice/widgetbigsmall/: CMakeLists.txt  main.cpp
LessonCode/week06/: CMakeLists.txt
LessonCode/week06/practice/: CMakeLists.txt  ReadMe.md
LessonCode/week06/practice/QtQLabelEvent/: mainwindow.cpp  mainwindow.h  mainwindow.ui
LessonCode/week06/practice/QtUiCounter/: mainwindow.cpp  mainwindow.h  mainwindow.ui
LessonCode/week07/practice/: CMakeLists.txt  ReadMe.md
LessonCode/week08/: CMakeLists.txt
LessonCode/week08/homework/: CMakeLists.txt  ReadMe.md
LessonCode/week08/practice/: CMakeLists.txt  ReadMe.md
(+94 files in other folders)
